--- a/requirements.txt
+++ b/requirements.txt
@@ -41,3 +41,10 @@ jinja2>=3.1.0
 python-multipart>=0.0.6
 httpx>=0.25.0  # For webhook triggers and Node-RED integration
 
+# Testing dependencies
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+pytest-mock>=3.11.0
+pytest-timeout>=2.1.0
+
